fixed hidden overflow

--- a/style.css
+++ b/style.css
@@ -69,7 +69,6 @@ img {
 }
 
 #overflow {
-    overflow: hidden;
     margin: auto;
     width: 50%;
 }
